# civd

./: .gitignore  EXTENSIONS.md  README.md  pyproject.toml
benchmark/: adapter_contract_test.py  adapter_numpy_smoke_test.py  adapter_torch_smoke_test.py  api_smoke_test.py  bridge_publish_demo.py  bridge_voxelgrid_smoke_test.py  plot_roi_delta.py  plot_stream.py  plot_timepack.py  plot_usd_like_stream.py  replay_submap.py  roi_delta_only.py  roi_load.py  roi_time.py  run_all_smokes.py  schema_verify.py  stream_load.py  submap_export_bench.py  submap_schema_verify.py  torch_dataset_smoke_test.py  usd_like_stream_demo.py  verify_tile_read.py
bridge/: msg.py  pubsub.py
bridge_ros2/: pub.py  sub.py
civd/: __init__.py  core.py  export_submap.py  loader.py  roi.py  roi_delta.py  schema.py  source.py  submap_schema.py  temporal_tiler.py  tiler.py  time_loader.py  upgrade_index.py  usd_stream.py  world.py
civd/adapters/: __init__.py  numpy_adapter.py  pytorch_adapter.py  ros2_adapter.py  torch_adapter.py
civd/bridge/: __init__.py  pointcloud.py  voxelgrid.py
data/civd_time/t000/: index.json
data/civd_time/t001/: index.json
docs/: WHY_CIVD.md
scripts/: repro_phase_e.py
