[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civd"
version = "0.1.0"
description = "CIVD Core: ROI-first volumetric data capsule with temporal packs and delta-aware streaming."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "zstandard>=0.21.0",
]

[project.optional-dependencies]
torch = ["torch"]
ros2 = []  # placeholder; fill later if you publish ROS2 Python deps
dev = ["pytest"]

[tool.setuptools]
packages = ["civd"]

[project.scripts]
civd-upgrade-index = "civd.upgrade_index:main"
civd-export-submap = "civd.export_submap:main"
